# CMakeDependencyDiagram

./: Makefile  README.md  dummy-gpg-key-batch  install_build_dependencies.sh  upload_to_ppa_ubuntu_22.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: validation.yaml
packaging/ubuntu-20/debian/: control  install
packaging/ubuntu-22/debian/: changelog  control  install
packaging/ubuntu-24/debian/: changelog  control  copyright
src/: CMakeDependencyDiagram.cmake
src/CMakeDependencyDiagram/: convert_dot_files_to_png.sh  index.html
src/CMakeDependencyDiagrams/: index.html
tests/: integration_test.sh  test_utils.sh
tests/debian_package_test/: debian_package_test.sh
tests/debian_package_test/dummy_project/: main.cpp
tests/integration_test/: CMakeLists.txt  main.cpp
tests/integration_test/some_interface_lib/: CMakeLists.txt  some_interface_lib.h
tests/unit_tests/: TestCatalog.md
tests/unit_tests/executable/: with_graphviz_option.sh
tests/unit_tests/two_project/: without_graphviz_option.sh
